style.css
html, body{
	margin: 0 auto;
	height: 100%;
	width: 100%;
	-webkit-font-smoothing: antialiased;
	word-wrap: break-word;
}

.page-wrap {
width: 100%;
margin: 0 auto;
position: relative;
}

.w3-allerta {
  font-family: "Allerta Stencil", Sans-serif;
}
.w3-lobster {
    font-family: "Lobster", serif;
}

#left {
	position: absolute;
	left: 0;
	width: 50%;
	height: 100vh;
	background-color: #131418;
	color: white;
}

#name {
	margin-top: 3%;
	margin-left: 10%;
	justify-content: center;
	font-size: 30px;
}

#dot {
	color: #ef473a;
	font-size: 40px;
}

#title {
	color: #FAFAFA;
	text-shadow: 1px 1px 2px #ef473a, 0 0 25px #ef473a, 0 0 5px #cb2d3e;
	line-height: 1;
	font-size: 60px;
}

#content {
	margin-left: 10%;
	color: #EEEEEE;
	line-height: 1.6;
	font-size: 25px;
	font-weight: normal;
	margin-top: 32%;
	margin-right: 16%;
}

.btn {
	border:none;
	background-color:  #ef473a;
	border-color: white;
	font-size: 20px;
	padding: 2px;
}
.btn:hover{
	background-color: white;
	color: #cb2d3e;
}
.btn:focus{
	box-shadow: none;
}


#social-icons {
	position: absolute;
	margin-left: 4%;
	margin-top: 10%;
}

ul {
	list-style: none;
	display: flex;
	justify-content: center;
	margin-top: 30%;
}

li {
	padding: 20px;
	font-size: 25px;
}

a {
	text-decoration:none;
}

.fa {
	color: #ef473a;
}
.fa:hover {
	color: white;
	text-decoration: none;
}

#stay-in-touch {
	font-size: 18px;
	font-family: "Lobster", serif;
	color: #EEEEEE;
}
/*-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
#right {
	position: absolute;
	left: 50%;
	width: 50%;
	height: 100vh;
	background: linear-gradient(to right, #cb2d3e, #ef473a);
}

#countdown {
	display: flex;
	justify-content: center;
	flex-wrap: wrap;
	justify-content: center;
	margin-top: 50%;
}

.circle {
	background-color: white;
	color: #ef473a;
	font-size: 40px;
	text-align: center;
	font-weight: bold;
	font-family: "Allerta Stencil", Sans-serif;
	height: 120px;
	width: 120px;
	border-radius: 50%;
	margin-left: 40px;
	box-shadow: 0px 0px 0px 5px rgba(255,255,255,0.4);
}

.fix-text {
	font-size: 20px;
	font-weight: normal;
}

.center-align-time {
	margin-top: 13px;
}

/*--------------------------------------------------------------------*/
.modal-body a {
	color: #EEEEEE;
	text-decoration: none;
	font-family: "Allerta Stencil", Sans-serif;
	font-size: 20px;
}
.modal-body a:hover {
	text-decoration: none;
	color: #ef473a;
}

.modal-header {
	background: linear-gradient(to right, #cb2d3e, #ef473a); 
	font-style: italic;
}

#exampleModal:focus {
	border:none;
}

#exampleModalLabel {
	font-family: "Lobster", serif;
	font-weight: bolder;
	font-size: 25px;
}

.modal-body {
	background-color: #131418;
}

.x {
	color: white;
}

.modal-backdrop{
    opacity: 0.97 !important;
}

